hphp/test/zend/good/ext/standard/tests/general_functions/highlight_heredoc.php
<?php
$str = '
$x=<<<DD
jhdsjkfhjdsh
DD
."";
$a=<<<DDDD
jhdsjkfhjdsh
DDDD;
';
highlight_string($str);
?>
