hphp/test/zend/bad/zend/nowdoc_014.php
<?php
$code = <<<'EOF'
<?php
  $x = <<<'EOT'
EOT
  $y = 2;
?>
EOF;
highlight_string($code);
?>